 Open Firm Accounting - NEWS

 Summary
 =======
 
   Version 0.64

-----------------------------------------------------------------------
 Version 0.64
 ============

 Released on 

 New features and improvements:

   - ofaDossierOpen: exercice is unselectable if no dossier is selected (todo #1297).
   - ofaExportAssistant: have a message when output file is not set.

 Bug fixes:

   - myIAssistant: fix quit on escape (fix key propagation).
   - ofaImportAssistant: fix page 4 label position.
   - ofaStreamFormatBin: fix header widgets sensitivity (todo #1298, #1299).

 Other changes:

   - myIWindow: set_settings() is renamed set_geometry_settings() (todo #1282).
   - myIWindow: deprecate my_iwindow_get_keyname() (todo #1283).
   - No more try to read/write user settings from myIWindow geometry settings (todo #1284).
   - ofaAccountBookBin class is renamed to ofaAccountBookArgs.
   - ofaBalanceBin class is renamed to ofaBalanceArgs.
   - ofaDossierActionsBin: new class.
   - ofaDossierEditBin: new class.
   - ofaDossierMetaBin: new class.
   - ofaExerciceMetaBin: new class.
   - ofaIDBDossierEditor: new interface.
   - ofaIDBExerciceEditor: new interface.
   - ofaIDBprovider: maintains a pointer to ofaHub.
   - ofaISetter: new interface which targets dynamic objects.
   - ofaLedgerBookBin class is renamed to ofaLedgerBookArgs.
   - ofaLedgerSummaryBin class is renamed to ofaLedgerSummaryArgs.
   - ofaMysqlDossierBin: new class.
   - ofaMysqlDossierEditor: new class.
   - ofaMysqlExerciceBin: new class.
   - ofaMysqlExerciceEditor: new class.
   - ofaMysqlRootBin: new class.
   - ofaReconcilBin class is renamed to ofaReconcilArgs.
   - ofa_prefs_export_default_folder(): new function.

   + General review of read/write user settings.

-----------------------------------------------------------------------
 P. Wieser - Created on 2014, may 2nd
             Last updated on 2017, jan. 4th.