@@ -1454,7 +1454,6 @@ p6_do_archive_exercice( ofaExerciceCloseAssistant *self, gboolean with_ui )
 		cnx = ofa_idbprovider_new_connect( provider, cur_account, cur_password, priv->dossier_meta, period );
 		ok = ( cnx != NULL );
 
-		g_object_unref( provider );
 		g_object_unref( period );
 
 		if( !ok ){
